wrap the header content a container with fixed width

--- a/public/modules/header/_style.scss
+++ b/public/modules/header/_style.scss
@@ -16,6 +16,7 @@ header {
 
   .inner {
     display: block;
+    @include container;
   }
 
   .item {
